--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -13,9 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 9)\n",
+      "Index(['PlayerOne', 'PlayerTwo', 'Dictionary', 'ScorePlayerOne',\n",
+      "       'ScorePlayerTwo', 'NumTurns', 'MaxScore', 'MinScore', 'MeanScore'],\n",
+      "      dtype='object')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -51,306 +61,116 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Nopparuj</td>\n",
-       "      <td>Thacha</td>\n",
+       "      <td>Toh Weibin</td>\n",
+       "      <td>Ryan Wee</td>\n",
        "      <td>CSW21</td>\n",
-       "      <td>435</td>\n",
-       "      <td>363</td>\n",
-       "      <td>25</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2</td>\n",
-       "      <td>31.92</td>\n",
+       "      <td>442</td>\n",
+       "      <td>467</td>\n",
+       "      <td>27</td>\n",
+       "      <td>95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Dan Wachtell</td>\n",
-       "      <td>James Donnelly</td>\n",
-       "      <td>NWL23</td>\n",
-       "      <td>361</td>\n",
-       "      <td>325</td>\n",
-       "      <td>34</td>\n",
-       "      <td>92</td>\n",
+       "      <td>Ryan Wee</td>\n",
+       "      <td>Tony Sim</td>\n",
+       "      <td>CSW21</td>\n",
+       "      <td>520</td>\n",
+       "      <td>368</td>\n",
+       "      <td>26</td>\n",
+       "      <td>86</td>\n",
        "      <td>0</td>\n",
-       "      <td>20.18</td>\n",
+       "      <td>34.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>James Donnelly</td>\n",
-       "      <td>Kenneth Rubin</td>\n",
-       "      <td>NWL23</td>\n",
-       "      <td>489</td>\n",
-       "      <td>340</td>\n",
-       "      <td>26</td>\n",
-       "      <td>93</td>\n",
-       "      <td>12</td>\n",
-       "      <td>36.88</td>\n",
+       "      <td>Ryan Wee</td>\n",
+       "      <td>Rajesh</td>\n",
+       "      <td>CSW21</td>\n",
+       "      <td>565</td>\n",
+       "      <td>394</td>\n",
+       "      <td>34</td>\n",
+       "      <td>104</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Richard Popper</td>\n",
-       "      <td>Samuel Kaplan</td>\n",
-       "      <td>NWL23</td>\n",
-       "      <td>409</td>\n",
-       "      <td>434</td>\n",
-       "      <td>24</td>\n",
-       "      <td>91</td>\n",
-       "      <td>8</td>\n",
-       "      <td>35.12</td>\n",
+       "      <td>Ryan Wee</td>\n",
+       "      <td>Poh Ying Ming</td>\n",
+       "      <td>CSW21</td>\n",
+       "      <td>393</td>\n",
+       "      <td>399</td>\n",
+       "      <td>25</td>\n",
+       "      <td>84</td>\n",
+       "      <td>5</td>\n",
+       "      <td>31.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Natakorn</td>\n",
-       "      <td>Sakdipong</td>\n",
+       "      <td>Matthew O'Connor</td>\n",
+       "      <td>Justin Morris</td>\n",
        "      <td>CSW21</td>\n",
-       "      <td>442</td>\n",
-       "      <td>434</td>\n",
-       "      <td>31</td>\n",
-       "      <td>97</td>\n",
-       "      <td>4</td>\n",
-       "      <td>28.26</td>\n",
+       "      <td>378</td>\n",
+       "      <td>305</td>\n",
+       "      <td>29</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        PlayerOne       PlayerTwo Dictionary  ScorePlayerOne  ScorePlayerTwo  \\\n",
-       "0        Nopparuj          Thacha      CSW21             435             363   \n",
-       "1    Dan Wachtell  James Donnelly      NWL23             361             325   \n",
-       "2  James Donnelly   Kenneth Rubin      NWL23             489             340   \n",
-       "3  Richard Popper   Samuel Kaplan      NWL23             409             434   \n",
-       "4        Natakorn       Sakdipong      CSW21             442             434   \n",
+       "          PlayerOne      PlayerTwo Dictionary  ScorePlayerOne  ScorePlayerTwo  \\\n",
+       "0        Toh Weibin       Ryan Wee      CSW21             442             467   \n",
+       "1          Ryan Wee       Tony Sim      CSW21             520             368   \n",
+       "2          Ryan Wee         Rajesh      CSW21             565             394   \n",
+       "3          Ryan Wee  Poh Ying Ming      CSW21             393             399   \n",
+       "4  Matthew O'Connor  Justin Morris      CSW21             378             305   \n",
        "\n",
        "   NumTurns  MaxScore  MinScore  MeanScore  \n",
-       "0        25       100         2      31.92  \n",
-       "1        34        92         0      20.18  \n",
-       "2        26        93        12      36.88  \n",
-       "3        24        91         8      35.12  \n",
-       "4        31        97         4      28.26  "
+       "0        27        95         5      33.67  \n",
+       "1        26        86         0      34.15  \n",
+       "2        34       104         0      35.10  \n",
+       "3        25        84         5      31.68  \n",
+       "4        29        45         0      23.55  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "all_games = pd.read_csv(\"games_metadata.csv\")\n",
+    "print(all_games.shape)\n",
+    "print(all_games.columns)\n",
     "all_games.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PlayerOne</th>\n",
-       "      <th>PlayerTwo</th>\n",
-       "      <th>Dictionary</th>\n",
-       "      <th>ScorePlayerOne</th>\n",
-       "      <th>ScorePlayerTwo</th>\n",
-       "      <th>NumTurns</th>\n",
-       "      <th>MaxScore</th>\n",
-       "      <th>MinScore</th>\n",
-       "      <th>AvgTurnScore</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Nopparuj</td>\n",
-       "      <td>Thacha</td>\n",
-       "      <td>CSW21</td>\n",
-       "      <td>435</td>\n",
-       "      <td>363</td>\n",
-       "      <td>25</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2</td>\n",
-       "      <td>31.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Dan Wachtell</td>\n",
-       "      <td>James Donnelly</td>\n",
-       "      <td>NWL23</td>\n",
-       "      <td>361</td>\n",
-       "      <td>325</td>\n",
-       "      <td>34</td>\n",
-       "      <td>92</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>James Donnelly</td>\n",
-       "      <td>Kenneth Rubin</td>\n",
-       "      <td>NWL23</td>\n",
-       "      <td>489</td>\n",
-       "      <td>340</td>\n",
-       "      <td>26</td>\n",
-       "      <td>93</td>\n",
-       "      <td>12</td>\n",
-       "      <td>36.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Richard Popper</td>\n",
-       "      <td>Samuel Kaplan</td>\n",
-       "      <td>NWL23</td>\n",
-       "      <td>409</td>\n",
-       "      <td>434</td>\n",
-       "      <td>24</td>\n",
-       "      <td>91</td>\n",
-       "      <td>8</td>\n",
-       "      <td>35.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Natakorn</td>\n",
-       "      <td>Sakdipong</td>\n",
-       "      <td>CSW21</td>\n",
-       "      <td>442</td>\n",
-       "      <td>434</td>\n",
-       "      <td>31</td>\n",
-       "      <td>97</td>\n",
-       "      <td>4</td>\n",
-       "      <td>28.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>Noah Walton</td>\n",
-       "      <td>Kenneth Rubin</td>\n",
-       "      <td>NWL23</td>\n",
-       "      <td>499</td>\n",
-       "      <td>420</td>\n",
-       "      <td>24</td>\n",
-       "      <td>92</td>\n",
-       "      <td>8</td>\n",
-       "      <td>38.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>Kenji</td>\n",
-       "      <td>Shreve</td>\n",
-       "      <td>WOW24</td>\n",
-       "      <td>534</td>\n",
-       "      <td>378</td>\n",
-       "      <td>24</td>\n",
-       "      <td>96</td>\n",
-       "      <td>6</td>\n",
-       "      <td>38.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>Mike Frentz</td>\n",
-       "      <td>Kenji</td>\n",
-       "      <td>WOW24</td>\n",
-       "      <td>475</td>\n",
-       "      <td>347</td>\n",
-       "      <td>23</td>\n",
-       "      <td>107</td>\n",
-       "      <td>2</td>\n",
-       "      <td>35.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>Kenji</td>\n",
-       "      <td>Jim Sherill</td>\n",
-       "      <td>WOW24</td>\n",
-       "      <td>518</td>\n",
-       "      <td>296</td>\n",
-       "      <td>32</td>\n",
-       "      <td>74</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>Kenji</td>\n",
-       "      <td>Jim Sherill</td>\n",
-       "      <td>WOW24</td>\n",
-       "      <td>518</td>\n",
-       "      <td>296</td>\n",
-       "      <td>32</td>\n",
-       "      <td>74</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>202 rows × 9 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          PlayerOne       PlayerTwo Dictionary  ScorePlayerOne  \\\n",
-       "0          Nopparuj          Thacha      CSW21             435   \n",
-       "1      Dan Wachtell  James Donnelly      NWL23             361   \n",
-       "2    James Donnelly   Kenneth Rubin      NWL23             489   \n",
-       "3    Richard Popper   Samuel Kaplan      NWL23             409   \n",
-       "4          Natakorn       Sakdipong      CSW21             442   \n",
-       "..              ...             ...        ...             ...   \n",
-       "197     Noah Walton   Kenneth Rubin      NWL23             499   \n",
-       "198           Kenji          Shreve      WOW24             534   \n",
-       "199     Mike Frentz           Kenji      WOW24             475   \n",
-       "200           Kenji     Jim Sherill      WOW24             518   \n",
-       "201           Kenji     Jim Sherill      WOW24             518   \n",
-       "\n",
-       "     ScorePlayerTwo  NumTurns  MaxScore  MinScore  AvgTurnScore  \n",
-       "0               363        25       100         2         31.92  \n",
-       "1               325        34        92         0         20.18  \n",
-       "2               340        26        93        12         36.88  \n",
-       "3               434        24        91         8         35.12  \n",
-       "4               434        31        97         4         28.26  \n",
-       "..              ...       ...       ...       ...           ...  \n",
-       "197             420        24        92         8         38.29  \n",
-       "198             378        24        96         6         38.00  \n",
-       "199             347        23       107         2         35.74  \n",
-       "200             296        32        74         0         25.44  \n",
-       "201             296        32        74         0         25.44  \n",
-       "\n",
-       "[202 rows x 9 columns]"
+       "(985, 9)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_games.rename(columns = {\"MeanScore\": \"AvgTurnScore\"}, inplace = True)"
+    "all_games.rename(columns = {\"MeanScore\": \"AvgTurnScore\"}, inplace = True)\n",
+    "all_games = all_games.drop_duplicates(keep=False)\n",
+    "print(all_games.shape) # 15 duplicate games\n"
    ]
   },
   {
