--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -174,6 +174,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### I noticed a few games where the score was equal to zero for both players. Let's see how many there are."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            PlayerOne         PlayerTwo Dictionary  ScorePlayerOne  \\\n",
+      "62    David Ogedengbe      John Aiyedun      CSW21               0   \n",
+      "63       John Aiyedun   David Ogedengbe      CSW21               0   \n",
+      "71    David Ogedengbe      John Aiyedun      CSW21               0   \n",
+      "73       John Aiyedun   David Ogedengbe      CSW21               0   \n",
+      "74       John Aiyedun   David Ogedengbe      CSW21               0   \n",
+      "121    Jonathan Lindh    Frank Tangredi      NWL23               0   \n",
+      "179      John Aiyedun      James Ewruje      CSW21               0   \n",
+      "205      James Ewruje      John Aiyedun      CSW21               0   \n",
+      "208      John Aiyedun      James Ewruje      CSW21               0   \n",
+      "209      John Aiyedun      James Ewruje      CSW21               0   \n",
+      "210      James Ewruje      John Aiyedun      CSW21               0   \n",
+      "301            Thacha          Nattapat      CSW21               0   \n",
+      "396              beth             julia      NWL23               0   \n",
+      "402    Joey Krafchick         Joe Edley      NWL23               0   \n",
+      "404    Joey Krafchick       Mark Garrod      NWL23               0   \n",
+      "406     Ian Weinstein    Joey Krafchick      NWL23               0   \n",
+      "600      John Aiyedun     Tega Okiemute      CSW21               0   \n",
+      "601     Tega Okiemute      John Aiyedun      CSW21               0   \n",
+      "602      John Aiyedun     Tega Okiemute      CSW21               0   \n",
+      "603     Tega Okiemute      John Aiyedun      CSW21               0   \n",
+      "604      John Aiyedun     Tega Okiemute      CSW21               0   \n",
+      "605      John Aiyedun     Tega Okiemute      CSW21               0   \n",
+      "606     Tega Okiemute      John Aiyedun      CSW21               0   \n",
+      "607      John Aiyedun     Tega Okiemute      CSW21               0   \n",
+      "608     Tega Okiemute      John Aiyedun      CSW21               0   \n",
+      "637    Michael Thelen        Josh Sokol      NWL23               0   \n",
+      "751   Olumide Oyejide     Cyril Umebiye      CSW21               0   \n",
+      "756     Cyril Umebiye   Olumide Oyejide      CSW21               0   \n",
+      "758     Cyril Umebiye   Olumide Oyejide      CSW21               0   \n",
+      "809  Jimoh Abdulmumin      John Aiyedun      CSW21               0   \n",
+      "811  Jimoh Abdulmumin      John Aiyedun      CSW21               0   \n",
+      "812      John Aiyedun  Jimoh Abdulmumin      CSW21               0   \n",
+      "813    Joey Krafchick        Orry Swift      NWL23               0   \n",
+      "814        Orry Swift    Joey Krafchick      NWL23               0   \n",
+      "815    Joey Krafchick        Orry Swift      NWL23               0   \n",
+      "816    Joey Krafchick        Orry Swift      NWL23               0   \n",
+      "817  Jimoh Abdulmumin      John Aiyedun      CSW21               0   \n",
+      "818        Orry Swift    Joey Krafchick      NWL23               0   \n",
+      "819        Orry Swift    Joey Krafchick      NWL23               0   \n",
+      "821  Jimoh Abdulmumin      John Aiyedun      CSW21               0   \n",
+      "823  Jimoh Abdulmumin      John Aiyedun      CSW21               0   \n",
+      "826      John Aiyedun  Jimoh Abdulmumin      CSW21               0   \n",
+      "836        Orry Swift    Joey Krafchick      NWL23               0   \n",
+      "837        Orry Swift    Joey Krafchick      NWL23               0   \n",
+      "\n",
+      "     ScorePlayerTwo  NumTurns  MaxScore  MinScore  AvgTurnScore  \n",
+      "62                0        19        84        10         42.11  \n",
+      "63                0        24        91         0         32.43  \n",
+      "71                0        24        77        10         31.61  \n",
+      "73                0        22        90        11         38.43  \n",
+      "74                0        24       158        12         44.18  \n",
+      "121               0        32        78         0         28.67  \n",
+      "179               0        21        78        14         36.70  \n",
+      "205               0        23        88         0         32.27  \n",
+      "208               0        22        77        12         33.95  \n",
+      "209               0        24        90         0         36.00  \n",
+      "210               0        23       213         4         39.55  \n",
+      "301               0        23       107         0         41.10  \n",
+      "396               0        34       131         0         24.61  \n",
+      "402               0        14        99        17         45.00  \n",
+      "404               0        26        80         0         30.56  \n",
+      "406               0        27        82         0         30.52  \n",
+      "600               0        23        86        10         37.23  \n",
+      "601               0        22        81        16         39.43  \n",
+      "602               0        19        90        14         40.11  \n",
+      "603               0        20        83         6         36.68  \n",
+      "604               0        23        78         0         39.43  \n",
+      "605               0        19        88         6         32.06  \n",
+      "606               0        22        72         0         29.76  \n",
+      "607               0        21        88         8         39.95  \n",
+      "608               0        21        76         0         33.00  \n",
+      "637               0        24        72         0         28.83  \n",
+      "751               0        23       108        11         30.86  \n",
+      "756               0        24        85         0         36.65  \n",
+      "758               0        22        80         7         38.00  \n",
+      "809               0        23        88         0         34.91  \n",
+      "811               0        21       100         0         36.55  \n",
+      "812               0        25        95         6         35.00  \n",
+      "813               0        24        78         0         34.17  \n",
+      "814               0        20        66        10         33.37  \n",
+      "815               0        25        80         0         31.04  \n",
+      "816               0        21        95        12         36.85  \n",
+      "817               0        28        94         0         38.60  \n",
+      "818               0        25        83        11         30.12  \n",
+      "819               0        20        90         5         36.05  \n",
+      "821               0        26        80         0         30.42  \n",
+      "823               0        20        86        13         39.58  \n",
+      "826               0        24        86        10         41.64  \n",
+      "836               0        17        97         0         39.25  \n",
+      "837               0        21        84         6         35.65  \n",
+      "\n",
+      " Number of zero games that need to be checked out: 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_games[all_games[\"ScorePlayerOne\"] == 0]) # Weird, maybe check the source?\n",
+    "zero_games = all_games[all_games[\"ScorePlayerOne\"] == 0].shape[0] \n",
+    "print(f\"\\n Number of zero games that need to be checked out: {zero_games}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -234,6 +352,154 @@
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Before doing any further analysis, we've got to check out Nigel's game data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PlayerOne</th>\n",
+       "      <th>PlayerTwo</th>\n",
+       "      <th>Dictionary</th>\n",
+       "      <th>ScorePlayerOne</th>\n",
+       "      <th>ScorePlayerTwo</th>\n",
+       "      <th>NumTurns</th>\n",
+       "      <th>MaxScore</th>\n",
+       "      <th>MinScore</th>\n",
+       "      <th>AvgTurnScore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>Panupol Sujjayakorn</td>\n",
+       "      <td>Nigel Richards</td>\n",
+       "      <td>CSW07</td>\n",
+       "      <td>372</td>\n",
+       "      <td>499</td>\n",
+       "      <td>26</td>\n",
+       "      <td>91</td>\n",
+       "      <td>4</td>\n",
+       "      <td>37.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>Nigel Richards</td>\n",
+       "      <td>Siu Hean Cheah</td>\n",
+       "      <td>CSW07</td>\n",
+       "      <td>321</td>\n",
+       "      <td>447</td>\n",
+       "      <td>23</td>\n",
+       "      <td>86</td>\n",
+       "      <td>14</td>\n",
+       "      <td>33.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>Nigel Richards</td>\n",
+       "      <td>Theodoro Martus</td>\n",
+       "      <td>CSW07</td>\n",
+       "      <td>432</td>\n",
+       "      <td>421</td>\n",
+       "      <td>25</td>\n",
+       "      <td>85</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>Nigel Richards</td>\n",
+       "      <td>Odette Carmina Rio</td>\n",
+       "      <td>CSW07</td>\n",
+       "      <td>484</td>\n",
+       "      <td>357</td>\n",
+       "      <td>24</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>Robert Linn</td>\n",
+       "      <td>Nigel Richards</td>\n",
+       "      <td>CSW07</td>\n",
+       "      <td>540</td>\n",
+       "      <td>294</td>\n",
+       "      <td>27</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>Nigel Richards</td>\n",
+       "      <td>Brian Po</td>\n",
+       "      <td>CSW21</td>\n",
+       "      <td>502</td>\n",
+       "      <td>429</td>\n",
+       "      <td>23</td>\n",
+       "      <td>92</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40.48</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               PlayerOne           PlayerTwo Dictionary  ScorePlayerOne  \\\n",
+       "540  Panupol Sujjayakorn      Nigel Richards      CSW07             372   \n",
+       "541       Nigel Richards      Siu Hean Cheah      CSW07             321   \n",
+       "542       Nigel Richards     Theodoro Martus      CSW07             432   \n",
+       "543       Nigel Richards  Odette Carmina Rio      CSW07             484   \n",
+       "544          Robert Linn      Nigel Richards      CSW07             540   \n",
+       "907       Nigel Richards            Brian Po      CSW21             502   \n",
+       "\n",
+       "     ScorePlayerTwo  NumTurns  MaxScore  MinScore  AvgTurnScore  \n",
+       "540             499        26        91         4         37.80  \n",
+       "541             447        23        86        14         33.39  \n",
+       "542             421        25        85         0         34.12  \n",
+       "543             357        24        98         0         35.04  \n",
+       "544             294        27        83         0         30.89  \n",
+       "907             429        23        92         6         40.48  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_games[(all_games[\"PlayerOne\"] == \"Nigel Richards\") | (all_games[\"PlayerTwo\"] == \"Nigel Richards\")] ## Need more Nigel data"
    ]
   },
   {
